GBICSGO-2277: adds trashcan button to backup dialog
